<?xml version="1.0"?>
<package format="2">
  <name>rotations_helper</name>
  <version>0.0.0</version>
  <description>The rotations_helper package</description>

  <maintainer email="abel@todo.todo">abel</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
